Footer Changes/Fixes
-	Contact form in footer is now styled correctly (mirrors other Mission Inn site)
-	Contact form in footer now has placeholders if applicable
-	Copyright in footer is now handled the same way as on the other Mission Inn site (appears below everything unconditionally)

--- a/src/css/footer.less
+++ b/src/css/footer.less
@@ -9,6 +9,14 @@
 	background-color: @footer-background-color;
 	color: white;
 	
+	h3 {
+		
+		.font-size(2.3);
+		color: white;
+		margin-bottom: 24px;
+		
+	}
+	
 	.container {
 		
 		padding-bottom: @footer-padding-top-and-bottom;
@@ -27,6 +35,32 @@
 	a:hover {
 		
 		text-decoration: underline;
+		
+	}
+	
+	input[type="submit"] {
+		
+		background-color: #c45e20;
+		border: none;
+		color: white;
+		font-family: Lora, sans-serif;
+		font-weight: bold;
+		padding: 8px 24px;
+		
+	}
+	
+	input[type="text"], textarea, input[type="email"] {
+		
+		.font-size(1.4);
+		color: black;
+		padding: 6px;
+		width: 100%;
+		
+	}
+	
+	textarea {
+		
+		height: 54px;
 		
 	}
 
